# hypermedia-systems-example

./: .gitignore  Cargo.toml  justfile
src/: contact.rs  error.rs  handlers.rs  main.rs  state.rs  templates.rs
templates/: 404.html  edit_contact.html  error.html  get_contact.html  index.html  layout.html  new.html
