[package]
name = "hypermedia-systems"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = "0.8.9"
displaydoc = "0.2.6"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
